# sg2t

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  sg2t-env.yml  tox.ini
.github/workflows/: release.yml  test-build.yml  test.yml
docs/: conf.py  index.rst
docs/sg2t/: index.rst
examples/: aws_weather_tmy.ipynb  loadshape_import_tests.ipynb  loadshape_imports.ipynb  nsrdb_python_api.ipynb  weather_fake_demo.py  weather_tmy.py  weather_tmy3_demo.py  weather_tmy3_example.ipynb
examples/.ipynb_checkpoints/: request_loadshapes-checkpoint.ipynb
examples/data/: 100000-10.parquet  Timeseries_Data_CA_electric_year.csv
examples/dev/: weather_tmy3_demo.py
examples/marimo_notebooks/: .gitignore  README.md  loadshape_nrel_marimo.py  nrel_buildstock_demo.py  resstock_demo.py
licenses/: LICENSE.rst
scripts/: install_all_packages.sh
sg2t/: __init__.py  version.py
sg2t/config/: config.ini  config.py  paths.py
sg2t/electrification/: setup_package.py
sg2t/fuels/: __init__.py  electrification.py
sg2t/io/: __init__.py  base.json  base.py  schemas.py
sg2t/io/loadshapes/: ev.py
sg2t/io/loadshapes/nrel/: __init__.py  api.py  loadshape_nrel.py  mapping.py  naming.py  nbs.py  resstock.py
sg2t/io/loadshapes/nrel_resstock/: loadshape.py  mapping.py  nrel_resstock.json
sg2t/io/tests/: test_nrel_resstock.py  test_tmy3.py
sg2t/io/tests/data/resstock_tmy3_loads/: AL_bldg_100066-0.parquet  AL_bldg_100140-0.parquet  G0100310_TMY3.csv  G0101270_TMY3.csv  (+2 more)
sg2t/io/tmy3/: converters.py  nrel.json  tmy3.py
sg2t/io/weather/: base.py
sg2t/io/weather/tmy3/: __init__.py  mapping.py  tmy3.py  tmy3_nrel.json  tmy3_nrel_sg2t_io.json  tmy3_nrel_stock.json  tmy3_nrel_stock.py
sg2t/loadshape/: __init__.py  loadshape.py  loadshape_nrel.py  nrel.py  setup_package.py  utils.py
sg2t/sg2t-advanced-load-modeling/: README.md  setup.py
sg2t/sg2t-advanced-load-modeling/sg2t/advanced_load_modeling/: __init__.py
sg2t/sg2t-advanced-load-modeling/sg2t_advanced_load_modeling.egg-info/: PKG-INFO  SOURCES.txt
sg2t/sg2t-electrification/: README.md  setup.py
sg2t/sg2t-electrification/sg2t/electrification/: __init__.py
sg2t/sg2t-electrification/sg2t_electrification.egg-info/: PKG-INFO  SOURCES.txt
sg2t/sg2t-load-composition-analysis/: README.md  setup.py
sg2t/sg2t-load-composition-analysis/sg2t/load_composition_analysis/: __init__.py
sg2t/sg2t-load-composition-analysis/sg2t_load_composition_analysis.egg-info/: PKG-INFO  SOURCES.txt
sg2t/sg2t-loadshape/: README.md  setup.py
sg2t/sg2t-loadshape/sg2t/loadshape/: __init__.py
sg2t/sg2t-loadshape/sg2t_loadshape.egg-info/: PKG-INFO  SOURCES.txt
sg2t/tests/io/: test_nrel_resstock.py  test_resstock.py  test_tmy3.py
sg2t/tests/io/data/: .index
sg2t/tests/loadshape/: test_loadshape.py
sg2t/timeseries/: __init__.py  timeseries.py
sg2t/transportation/: speech.py
sg2t/utils/: __init__.py  io.py  saving.py  timeseries.py
sg2t/weather/: __init__.py  setup_package.py  weather.py
tests/io/: test_resstock.py  test_tmy3.py
tests/io/data/resstock_amy_2018/: 100171-0.parquet  G0100890_2018.csv  G0101270_2018.csv
tests/io/data/resstock_tmy3_loads/: data_dictionary_out_only.tsv
tests/loadshape/data/: metadata_resstock_2023-02-04_18-27-36-39.json  resstock_2023-02-04_18-27-36-39.csv
(+6 files in other folders)
