[build-system]
requires = ["setuptools>=64.0", "setuptools-scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "sg2t"
description = "SLAC GISMo Grid Tools is single core package for grid related data cleaning, manipulation and data science in Python."
readme = "README.md"
license.file = "LICENSE"
authors = [
    { name = "Sara Miskovich", email = "smiskov@slac.stanford.edu" },
    { name = "David Chassin", email = "dchassin@slac.stanford.edu" },
    { name = "Mohamed Nijad "},
]
keywords = ["grid", "load modeling", "electric loadshapes"]
requires-python = ">=3.6"

dependencies = [
    "numpy",
    "pandas",
    "jupyter",
    "matplotlib",
    "marimo"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]
[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["sg2t*"]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-changelog>=1.2.0",
    "sphinx_design",
]

[project.urls]
Homepage = "https://github.com/slacgismo/sg2t"
Documentation = "https://sg2t.readthedocs.io/"
"Bug Tracker" = "https://github.com/slacgismo/sg2t/issues"
Discussions = "https://github.com/slacgismo/sg2t/discussions"
