[metadata]
name = sg2t
author = Sara Miskovich
author_email = smiskov@slac.stanford.edu
license = GNU GPL v3+
license_file = licenses/LICENSE.rst
url = https://github.com/slacgismo/sg2t
description = SLAC GISMo Grid Tools is single core package for grid related data cleaning, manipulation and data science in Python.
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires =
    numpy>=1.23.4
    pandas>=1.5.1
    matplotlib>=3.6.2
    pyarrow>=10
    jupyter>=1.0.0
    boto3>=1.26

[options.extras_require]
all =
test =
    unittest
docs =
    sphinx
    sphinx-automodapi

[tool:pytest]
testpaths = "sg2t" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
  sg2t/__init*
  sg2t/conftest.py
  sg2t/*setup_package*
  sg2t/tests/*
  sg2t/*/tests/*
  sg2t/extern/*
  sg2t/version*
  */sg2t/__init*
  */sg2t/conftest.py
  */sg2t/*setup_package*
  */sg2t/tests/*
  */sg2t/*/tests/*
  */sg2t/extern/*
  */sg2t/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
